Update and rename index-3.html to index.html

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <a href="https://www.linkedin.com/in/aramway-group-llc-a2b53b110/" class="linkedin"><i class="bx bxl-linkedin" style="color: #e0be8b; font-size: 30px;margin-left: 25px;"></i></a>
                 <a href="https://www.instagram.com/aramway/" class="instagram"><i class="bx bxl-instagram" style="color: #e0be8b; font-size: 30px;margin-left: 25px;"></i></a>
                 <a href="mailto:info@aramway.com" class="Email"><i class="bi bi-envelope-fill" style="color: #e0be8b; font-size: 30px;margin-left: 25px;"></i></a>
-                <a href="mailto:info@aramway.com" class="Email"><i class="bi bi-whatsapp" style="color: #e0be8b; font-size: 30px;margin-left: 25px;"></i></a>
+                <a href="tel:+1 202 860-8888" class="Email"><i class="bi bi-whatsapp" style="color: #e0be8b; font-size: 30px;margin-left: 25px;"></i></a>
             </div>
         </div>
 
