--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     </div>
                     <div class="" style="padding-left: 0px;">
                         <h1 style="color: #d8bf90;padding-left: 24px; position: relative;">Construction</h1>
-                        <span class="line-text" style="text-align: center; width: 40%;padding-left: 200px;bottom: -40px;z-index: 5; position: relative;"data-aos="zoom-in" data-aos-delay="3000">loading ...</span>
+                        <span class="line-text" style="text-align: center; width: 40%;padding-left: 200px;bottom: -40px;z-index: 5; position: relative;color:#4e4e4e;"data-aos="zoom-in" data-aos-delay="3000">loading ...</span>
 
                         <div class="line-box" style="width: 450px;margin-left: 24px;position: relative;    border-radius: 100px;">
                             <div class="line">
